# hermes-notch

./: .gitignore  LICENSE  README.md
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: api.ts  devmock.ts  main.ts  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: chat.rs  commands.rs  geometry.rs  http.rs  lib.rs  main.rs  panel.rs  settings.rs
app/src/render/: card.ts  dom.ts  markdown.ts
app/src/views/: panel.ts  settings.ts  strip.ts
docs/: DESIGN.md  PROTOCOL.md  WIDGET_SPEC.md
hermes-plugin/: manifest.json  plugin_api.py  validate_widget.py
scripts/: install.sh
skills/notch-widgetizer/: SKILL.md
widgets/adhd-focus/: state.py  widget.json
