[package]
name = "hermes-notch"
version = "0.1.0"
description = "Hermes Notch — a macOS notch HUD for Hermes widgets"
authors = ["Lucas Czekaj"]
edition = "2021"
rust-version = "1.88"

[lib]
name = "hermes_notch"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
window-vibrancy = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = [
  "NSScreen",
  "NSWindow",
  "NSResponder",
  "NSApplication",
  "NSEvent",
  "NSView",
] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
